--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-urlrewrite": "^1.2.0",
     "express-validator": "^2.20.4",
     "gitter-sidecar": "^1.2.3",
+    "marked": "^0.3.12",
     "jade": "^1.11.0",
     "json-loader": "^0.5.7",
     "json-query": "^2.2.2",
